productDetail -> cart cant find productMgtId = 3 but productMgtId dismatch productService so modify to inventoryId 25/08/29